Supporting shrinking/enlarging for notifications

Extensions have api to update text of a displayed
notification. Due to such update, notification recalculates
it's size. However, there was a bug in toast_contents_view,
that updating preferred_size_ didn't trigger update of
corresponding widget. Not updating widget lead to a visual
glitch.

BUG=605656

R=dewittj@chromium.com

Review-Url: https://codereview.chromium.org/1913433004
Cr-Commit-Position: refs/heads/master@{#392906}

Former-commit-id: 2f78eb16262f1442e4c2b0cc9a03689e5cc47353